booking - initial commit

--- a/app/views/layouts/_javascripts.html.erb
+++ b/app/views/layouts/_javascripts.html.erb
@@ -5,7 +5,16 @@
     <%= javascript_include_tag "jquery-ui-1.8.16.custom.min" %>   		
 	<%= javascript_include_tag "jquery.galleriffic" %>   	
 	<%= javascript_include_tag "jquery.opacityrollover" %>   
+		
+	<!-- linked drop down -->
 	<%= javascript_include_tag "jquery.chained.mini" %>   	
+	
+	<!-- calendar -->
+	<%= javascript_include_tag "fullcalendar.js" %>
+	<%= javascript_include_tag "calendar.js" %>	
+	<%= javascript_include_tag "popup.js" %>
+	
+	<!-- scripts for main and detailed pages -->
 	<%= javascript_include_tag "script" %>  
 
 	<!-- Vkontakte API -->
