--- a/app/views/layouts/_stylesheets.html.erb
+++ b/app/views/layouts/_stylesheets.html.erb
@@ -2,7 +2,14 @@
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 	<%= stylesheet_link_tag 'main',  :media => 'screen' %>
+	
+	<!-- photo gallery -->
 	<%= stylesheet_link_tag 'galleriffic',  :media => 'screen' %>
+	
+	<!-- pagination -->
 	<%= stylesheet_link_tag 'paging',  :media => 'screen' %>
 	
+	<!-- calendar -->
+	<%= stylesheet_link_tag "fullcalendar.css" %>  
+	<%= stylesheet_link_tag "popup.css" %>
 				
