--- a/app/views/saunas/show.html.erb
+++ b/app/views/saunas/show.html.erb
@@ -12,14 +12,10 @@
 				<%= render sauna_item %>					
 			<% end %>	
 
-			<%-#= render 'shared/social' %>
-				
-			<br/>
-			<input name="commit" type="submit" value="<%= t :book %>" onclick="showCalendarPopup('#dialog-calendar')">				
-					
+			<%= render 'shared/social' %>			
 		</div>
 				
-		<%-#= render 'map' %>		
+		<%= render 'map' %>		
 		<div class="clearing"></div>
 	</div>		
 	
