--- a/app/views/admin/bookings/_results.html.erb
+++ b/app/views/admin/bookings/_results.html.erb
@@ -1,7 +1,7 @@
 <ul class="result-list">	
 	<li class="head">
 		<div class="name"><%= t :booking %></div>
-		<div class="actions-label"><%= t :actions %></div>
+		<div class="status-label"><%= t :status %></div>
 	</li>	
 	<% if !@bookings.empty? %>
 		<%  @bookings.each do |booking| %>				
