--- a/app/views/notifier/booking_created_email_to_customer.text.erb
+++ b/app/views/notifier/booking_created_email_to_customer.text.erb
@@ -8,5 +8,6 @@
 контактное лицо: <%= @booking.fio %>
 телефон: <%= @booking.phone_number %>
 e-mail: <%= @booking.email %>
+дополнительно: <%= @booking.description %>
  
 C уважением, Администратор.
