--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -19,5 +19,6 @@
 	  <input type=hidden id="IncCurrLabel" name=IncCurrLabel value="">
 	  <input type=hidden id="Culture" name=Culture value="">
 	  <input type="submit" value="<%= t :go_to_payment %>" >
+	  <input type="button" value="<%= t :close %>" onclick="closePopup();" />	
 	</form>
 </div>
