--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,15 +1,14 @@
 <div class="main-page">
-	<% if current_user.super_admin? %>   
-		 <%= link_to t(:create_new_user), new_admin_user_path %>  	
+	<%= render 'globalsearch' %>	
+	
+	<% if current_user.super_admin? %> 
+		<div class="add-button-container ">		
+			<%= link_to t(:create_new_user), new_admin_user_path, :class => "big-add-green-button" %>  	 
+		</div>
 	<% end %>
-
-	<h1><%= t :users_list %></h1>
-	<ul class="result-list">	
-		<li class="head">
-			<div class="name"><%= t :user_name %></div>
-			<div><%= t :actions %></div>
-		</li>
-		<%= render @users %>				
-	</ul>
+	
+	<br/>
+	
+	<%= render 'results' %>	
 </div>
 
