--- a/app/views/bookings/new.js.erb
+++ b/app/views/bookings/new.js.erb
@@ -8,4 +8,5 @@ $('#dialog-contact .error').html(str);
 $('#dialog-contact .error').show();
 var old_height = parseInt($('#popup_height').val());
 $('#dialog-contact').height(old_height + add_height);
-
+enableContactFormPopup();	
+removeSpin();
