--- a/app/views/saunas/show.html.erb
+++ b/app/views/saunas/show.html.erb
@@ -12,10 +12,10 @@
 				<%= render sauna_item %>					
 			<% end %>	
 
-			<%= render 'shared/social' %>									
+			<%-#= render 'shared/social' %>									
 		</div>
 				
-		<%= render 'map' %>		
+		<%-#= render 'map' %>		
 		<div class="clearing"></div>
 	</div>		
 	
