--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,20 +8,16 @@
 				<li><a href="/admin/bookings">бронирования</a></li>				
 			<% end %>
 			
-			<li>			
-			<a href="/all">все сауны</a>
-			</li>
-			
-			<li><a href="/about">о проекте</a></li>
-			<!-- <li><a href="/contact">контакты</a></li>	-->
-			
-			<% if signed_in? && current_user.super_admin? %>
-				<li><a href="/admin/users">список пользователей</a></li>						
-			<% end %>															
-			
-			<% if signed_in? && current_user.super_admin? %>
-				<li><a href="/admin/sms_messages">смс сообщения</a></li>				
+			<% if !signed_in? %>
+				<li><a href="/all">все сауны</a></li>
+				<li><a href="/about">о проекте</a></li>
+				<!-- <li><a href="/contact">контакты</a></li>	-->							
 			<% end %>
+			
+			<% if signed_in? && current_user.super_admin? %>
+				<li><a href="/admin/users">список пользователей</a></li>
+				<li><a href="/admin/sms_messages">смс сообщения</a></li>				
+			<% end %>															
 			
 			<% if signed_in? %>
 				<li>
