--- a/app/views/saunas/_baseinfo.html.erb
+++ b/app/views/saunas/_baseinfo.html.erb
@@ -30,7 +30,7 @@
 		<% end %>		
 	</div>
 	
-			<% if signed_in? && (current_user.tester? || current_user.super_admin?)%>
+			<% if signed_in? && (current_user.tester? || current_user.super_admin?) && @sauna.is_booking? %>
 				<br/>
 				<input name="commit" type="submit" value="<%= t :book %>" onclick="showCalendarPopup('#dialog-calendar', <%= @sauna.id %>)">			
 			<% end %>		
