--- a/app/views/admin/external_payments/_results.html.erb
+++ b/app/views/admin/external_payments/_results.html.erb
@@ -1,6 +1,6 @@
 <ul class="result-list">	
 	<li class="head">
-		<div class="name"><%= t :payment %></div>
+		<div class="name"><%= t :request %></div>
 		<div class="capacity"><%= t :status %></div>
 		<div class="price"><%= t :amount %></div>
 	</li>	
