--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -9,7 +9,7 @@
 				<h1>Бани и сауны в Ижевске</h1>
 				<div class="extra_params _expanded">
 					<div class="about">
-						<p>Наш портал - это единый каталог бань и саун в Ижевске, а также удобный механизм их поиска и бронирования. 
+						<p>Наш портал - это единый каталог, которые содержит <a href="/all">бани и сауы в Ижевске</a>, а также удобный механизм их поиска и бронирования. 
 						Вы можете осуществлять поиск саун по нужным вам критериям (цена, вместимость, тип и т.д.), читать описания, смотреть 
 						фотографии, узнавать местоположение сауны на карте города или оставлять комментарии. Забронируйте понравившуюся сауну и внесите предоплату на нашем сайте, 
 						воспользовавшись банковской картой, электронным кошельком или терминалами оплаты системы Qiwi.</p>
@@ -28,8 +28,14 @@
 						
 						<p>Но мы позаботились не только о тех, кто любит погреться в сауне! Допустим, вы - владелец бани или сауны и хотите увеличить 
 						поток клиентов. Зарегистрируйте бесплатно вашу сауну и о ней узнают сотни пользователей нашего сайта. Редактируйте описание, добавляйте 
-						новые сауны, выкладывайте фотографии и модерируйте отзывы - всё это абсолютно бесплатно.
+						новые сауны, выкладывайте фотографии и модерируйте отзывы - всё это абсолютно бесплатно. 
 						</p>
+
+						<p>Уже скоро мы запустим <a href="/terms">онлайн-бронирование саун</a>. Опросы показывают, что при прочих равных условиях клиент выберет ту сауну, которую ему 
+						будет проще забронировать, поэтому обычно выбираются сауны или бани по-близости. 
+						И это логично, ведь ехать из одного конца города в другой - это значит потратить время, а в наш век - ещё и простоять в пробках. 
+						Позвольте Вашим клиентам бронировать сауну не вставая с кресла, и фактор "эта сауна далеко" перестанет играть для них решающую роль при выборе.										
+						</p>						
 						
 						<p>
 						Мы также планируем расширить географию нашего каталога и охватить все города Удмуртской Республики. Мы будем очень признательны за любую 
@@ -37,8 +43,8 @@
 						</p>
 						
 						<p>
-						Нам очень важно знать ваше мнение о таких вещах, как удобство сайта в использовании, достоверность и полнота информации, 
-						замечания по улучшению работы сервиса.
+						Нам очень важно знать ваше мнение о таких вещах, как удобство сайта в использовании, достоверность и полнота информации.
+				
 						Вы можете оставить свои замечания <a href="http://go-to-sauna.reformal.ru" target="blank">здесь</a>, мы
 						обязательно их рассмотрим! 			
 						</p>	
