--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -6,44 +6,52 @@
 	<div class="round-box filter-box">
 		<ul>
 			<li class="black _closeOnReady _expandedBox filter-section closed">
-				<h1>Правила и условия</h1>
+				<h1>Вопросы и ответы</h1>
 				<div class="extra_params _expanded">
 					<div class="about">
-						<div class="question">Я не вижу кнопку "забронировать" на старнице сауны.</div>
+						<div class="question"><b>Я не вижу кнопку "забронировать" на странице сауны. Где она?</b></div>
 						<div class="answer">
 						Кнопка "забронировать" отображается на странице тех саун и бань, которые подключены к нашей системы бронирования. 
 						Если кнопка отсутствует,
 						то вы можете забронировать сауну только по телефону или при личной встрече.
 						</div>
 						
-						<div class="question">У меня нет банковской карты, могу ли я внести предоплату наличными?</div>
+						<div class="question"><b>У меня нет банковской карты, могу ли я внести предоплату наличными?</b></div>
 						<div class="answer">
-						Вы можете внести пердоплату наличным в одном из терминалов оплаты Qiwi.
-						</div>
-			
-						<div class="question">У меня нет банковской карты, могу ли я внести предоплату наличными?</div>
-						<div class="answer">
-						Вы можете внести пердоплату наличным в одном из терминалов оплаты Qiwi.
+						Вы можете внести предоплату наличным в одном из терминалов оплаты Qiwi.
 						</div>
 						
-						<div class="question">Какия комиссия взымается при оплате через ваш сайт?</div>
+						<div class="question"><b>Какая комиссия взымается при оплате через ваш сайт?</b></div>
 						<div class="answer">
-						Мы не берем комиссию с пользователей. Комиссия может взыматься компаниями, которые обрабатывают ваш платеж. 
+						Мы не берем комиссию с пользователей. Комиссия может взыматься компаниями, которые обрабатывают Ваш платеж. 
 						Размер комиссии зависит от выбранного Вами способа оплаты.						
 						</div>
 						
-						<div class="question">Я внес предоплату, но не получил подтверждения.</div>
+						<div class="question"><b>Я внес предоплату, но не получил подтверждения.</b></div>
 						<div class="answer">
-						Если вы течении часа после оплаты вы не получили ни sms, ни email с подтверждением, рекомендуем Вам <a href="mailto:gotosauna@gmail.com">связаться с нами по email</a>.						
+						Если в течение часа после оплаты Вы не получили ни sms, ни email с подтверждением, рекомендуем Вам <a href="mailto:gotosauna@gmail.com">связаться с нами по email</a>.						
 						</div>
 						
-
+						<div class="question"><b>Почему цена на сайте не совпадает с той, что мне озвучили в сауне?</b></div>
+						<div class="answer">							
+						На сайте указана нижняя граница цен, т.е. минимально возможная цена. Цены могут отличаться в праздничные и выходные дни. 
+						Рекомендуем Вам перед бронированием уточнять информацию у администраторов саун.
+						</div>
 						
-						<!--
-						Выберите интересующую вас сауну, нажмите на кнопку "забронировать". В открывшемся окне выберете интересующий вас день. Если в этот день 
-						сауна свободна, выделите мышкой временной интервал, на который вы хотите забронировать сауну и нажмите "далее". В следующем окне заполните 
-						обязательные поля - контактное лице, номер телефона и адрес электронной почты. В поле "описание" вы можете оставить дополнительную информацию о заказе. 
-						-->
+						<div class="question"><b>Сколько стоит размещение сауны или бани в вашем каталоге?</b></div>
+						<div class="answer">Размещение в нашем каталоге саун и бань абсолютно бесплатно. 
+						</div>
+						
+						<div class="question"><b>Я - владелец сауны, как мне подключить онлайн-бронирование?</b></div>
+						<div class="answer">							
+						Возможность онлайн-бронирования подключается бесплатно через личный кабинет. 
+						Для получения доступа к нему <a href="mailto:gotosauna@gmail.com">напишите нам письмо</a> в свободной форме.
+						</div>
+						
+						<div class="question"><b>Я не нашел здесь ответа на свой вопрос.</b></div>
+						<div class="answer">							
+						Добавьте свой вопрос <a href="http://go-to-sauna.reformal.ru" target="blank">здесь</a>, мы обязательно на него ответим.</div>						
+					
 						
 					</div>
 					<div class="clearing"></div>
