--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -10,19 +10,30 @@
 				<div class="extra_params _expanded">
 					<div class="about">
 						<p>Наш портал позволяет забронировать сауны и бани в режиме реального времени. Забронировать можно только те сауны,
-						которые подключены к системе бронирования. Выбрав сауну, доступную на дату Вашего отдыха, Вы можете забронировать её на нашем сайте, 
-						осуществить предоплату и получить моментальное подтверждение о сделанной брони. 
-						Бронирование через нашу систему осуществляется бесплатно. Вы можете внести предоплату с помощью банковской карты, электронных кошельков или 
-						воспользовавшись терминалами оплаты системы Qiwi.</p>
+						которые подключены к системе бронирования.</p>
 						
+						<p>Мы стараемся поддерживать наш сайт в актуальном сотоянии и периодически собираем информацию о всех саунах в нашем каталоге.
+						Однако, во избежание недоразумений, рекомендуем Вам перед бронированием уточнять все вопросы у администраторов саун.</p>
 						
-						<p>Во время бронирования вам будет необходимо указать ваши контактные данные - имя, телефон и email. Эти данные нужны нам, чтобы оповестить вас о результатах
-						 бронирования путем sms и email. Мы гарантируем конфеденциальность ваших данных и не передаем их третьим лицам.						 
-						При внесении предоплаты Вы будете перенаправлены на сайт компании, которая занимается обработкой платежей. Выберите наиболее удобный 
-						вам способ оплаты. Мы осуществляем бронирование бесплатно, однако в зависимости от выбранного Вами вида оплаты, с Вас может быть удержана комиссия процессинговой компанией.						
-						После успешного бронирования, данные о вашем заказе будут отправлены администратору сауны. Также рекомендуем вам связываться с администраторами сауны по телефону  
-						для подтверждения бронирования и уточнения деталей.
+						<p> Выбрав и забронировав сауну на доступную дату, Вы получаете подтверждение о сделанной брони. Одновременно заявку на бронирование 
+						получает администратор сауны. Для гарантированного бронирования Вы должны внести предоплату.</p>
+						
+						<p>	Бронирование через нашу систему осуществляется бесплатно. Вы можете внести предоплату с помощью банковской карты, электронных кошельков или 
+						через терминалы оплаты системы Qiwi.</p>
+												
+						<p>Во время бронирования Вам необходимо указать контактные данные - имя, телефон и email. Эти данные нужны нам, чтобы оповестить вас о результатах
+						 бронирования путем sms и email. Мы гарантируем конфеденциальность ваших данных и не передаем их третьим лицам.</p>		
+						 
+						<p>При внесении предоплаты Вы будете перенаправлены на сайт компании ROBOKASSA, которая обработывает платежи с этого сайта. 
+						Мы осуществляем бронирование бесплатно, однако в зависимости от выбранного Вами вида оплаты, с Вас может быть удержана комиссия процессинговой компанией.						
 						</p>
+						
+						<p>В случае успешного бронирования, данные о Вашем заказе будут отправлены администратору сауны. Также рекомендуем Вам связываться с администраторами сауны по телефону  
+						для подтверждения бронирования и уточнения деталей.</p>
+					
+						
+						<p>Внимание! Мы осуществляем только посреднеческие услуги - предоставляем информацию о сауне и возможность её бронирования. 
+						Мы не несем ответственность за качество сервиса в саунах и банях, представленных в нашем каталоге.</p>							
 					</div>
 					<div class="clearing"></div>
 				</div>	
