--- a/app/views/saunas/_results.html.erb
+++ b/app/views/saunas/_results.html.erb
@@ -12,6 +12,8 @@
 		<%= render 'shared/empty_row' %>
 	<% end %>
 </ul>
+<div style="padding-top: 280px;">
 <div class="digg_pagination">
 	<%= paginate @saunas, :remote => true %>
+</div>
 </div>
