--- a/app/views/layouts/_welcome.html.erb
+++ b/app/views/layouts/_welcome.html.erb
@@ -1,14 +1,18 @@
 <div class="welcome">	
 	<div class="close-button">x</div>					
 	<div class="welcome-content">
-	<p>Наш портал - это место, где Вы быстро и легко найдете всю информацию о саунах и банях в Ижевске. Задайте параметры, которые наиболее важны для вас при выборе сауны - цена за час, вместимость, 
-	набор доп. услуг или местоположение, и 
-	наша система найдет для вас подходящие сауны. Или же посмотрите <a href="/all">все сауны</a>, которые имеются в нашем каталоге. 
-	Вы можете узнать цены и адрес, посмотреть фото, прочитать отзывы других посетителей и оставить свой.</p>
+	<p>Наш портал - это место, где Вы быстро и легко найдете всю информацию о саунах и банях в Ижевске. 
+	Задайте параметры, которые наиболее важны для вас при выборе сауны, и
+	наша система найдет для вас подходящие сауны. Или же посмотрите <a href="/all">все сауны</a>, которые имеются в нашем каталоге.</p>
 	<p>
-	Но и это ещё не всё. Вы отдыхаете компанией и вдруг появляется идея поехать в сауну, а под рукой нет ни справочников, ни компьютера. Знакомая ситуация? Нам она знакома,
-	именно поэтому мы создали мобильные версии сайта - <a href="/m">для обычных телефонов</a> и для <a href="/pda">для смартфонов</a>. 
-	Ищете сауну в любое время и в любом месте!
+	Под рукой нет компьютера? Для такого случая мы создали мобильные версии сайта - <a href="/m">для обычных телефонов</a> и для <a href="/pda">для смартфонов</a>. 
+	Ищете сауну в любое время и в любом месте!</p>
+	<p>
+	Выбрали подходяшую сауну, но чтобы внести предоплату надо ехать на другой конец города? 	
+	<a href="/terms">Онлайн-бронирование саун</a> решает эту проблему - оплачивайте сауну с помощью банковских карт и терминалов Qiwi.
+	</p>
+	<p>Мы сделали по-настоящему удобный и абсолютно бесплатный сервис потому,
+	что в первую очередь мы создавали его для себя! :)
 	</p>
 	</div>
 </div>	
