--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -16,26 +16,32 @@
 						то вы можете забронировать сауну только по телефону или при личной встрече.
 						</div>
 						
+						<div class="question"><b>В каких городах можно забронировать сауну через ваш сайт?</b></div>
+						<div class="answer">
+						На данный момент для бронирования доступны только сауны Ижевска.
+						</div>
+						
 						<div class="question"><b>У меня нет банковской карты, могу ли я внести предоплату наличными?</b></div>
 						<div class="answer">
-						Вы можете внести предоплату наличным в одном из терминалов оплаты Qiwi.
+						Вы можете внести предоплату наличными в терминалах оплаты Qiwi.
 						</div>
 						
 						<div class="question"><b>Какая комиссия взымается при оплате через ваш сайт?</b></div>
 						<div class="answer">
 						Мы не берем комиссию с пользователей. Комиссия может взыматься компаниями, которые обрабатывают Ваш платеж. 
 						Размер комиссии зависит от выбранного Вами способа оплаты.						
-						</div>
-						
-						<div class="question"><b>Я внес предоплату, но не получил подтверждения.</b></div>
-						<div class="answer">
-						Если в течение часа после оплаты Вы не получили ни sms, ни email с подтверждением, рекомендуем Вам <a href="mailto:gotosauna@gmail.com">связаться с нами по email</a>.						
-						</div>
+						</div>				
 						
 						<div class="question"><b>Почему цена на сайте не совпадает с той, что мне озвучили в сауне?</b></div>
 						<div class="answer">							
 						На сайте указана нижняя граница цен, т.е. минимально возможная цена. Цены могут отличаться в праздничные и выходные дни. 
 						Рекомендуем Вам перед бронированием уточнять информацию у администраторов саун.
+						</div>
+						
+						<div class="question"><b>Я забронировал сауну, но в назначенное время сауна была уже занята.</b></div>
+						<div class="answer">
+						Мы не несем ответственности за действия администраторов саун. В случае спорных ситуаций Вы можете получить внесенную предоплату обратно. 
+						Для это Вам необходимо <a href="mailto:gotosauna@gmail.com">связаться с нами по email</a> в срок не позже трех дней после даты бронирования.						
 						</div>
 						
 						<div class="question"><b>Сколько стоит размещение сауны или бани в вашем каталоге?</b></div>
