--- a/app/views/notifier/booking_created_email_to_customer.text.erb
+++ b/app/views/notifier/booking_created_email_to_customer.text.erb
@@ -2,8 +2,8 @@
 =====================================================
 
 Вы оставли заявку на бронирование:
-банный комплекс: <%= @booking.sauna.name %>
-сауна: <%= @booking.sauna_item.sauna.name %>
+банный комплекс: <%= @booking.sauna_item.sauna.name %>
+сауна: <%= @booking.sauna_item.name %>
 дата: <%= @booking.starts_at %>
 время: с <%= @booking.starts_at %> по <%= @booking.ends_at %>
 контактное лицо: <%= @booking.fio %>
