--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -9,7 +9,7 @@
 				<h1>Бани и сауны в Ижевске</h1>
 				<div class="extra_params _expanded">
 					<div class="about">
-						<p>Наш портал - это единый каталог, которые содержит <a href="/all">бани и сауы в Ижевске</a>, а также удобный механизм их поиска и бронирования. 
+						<p>Наш портал — это единый каталог, которые содержит <a href="/all">бани и сауы в Ижевске</a>, а также удобный механизм их поиска и бронирования. 
 						Вы можете осуществлять поиск саун по нужным вам критериям (цена, вместимость, тип и т.д.), читать описания, смотреть 
 						фотографии, узнавать местоположение сауны на карте города или оставлять комментарии. Забронируйте понравившуюся сауну и внесите предоплату на нашем сайте, 
 						воспользовавшись банковской картой, электронным кошельком или терминалами оплаты системы Qiwi.</p>
@@ -17,23 +17,23 @@
 						<p>Чтобы вам было удобнее, мы сделали две мобильные версии, которые ползволяют искать бани и сауны в любом месте.
 						</p>
 						<p>Версия <a href="/m">для обычных телефонов</a> проста и минималистична, она не содержит картинок и скриптов и подойдет даже 
-						для мобильных телефонов с разрешением экрана всего 128х160.	Однако вы по-прежнему можете осуществлять поиск и получать самую важную информацию о саунах - описание, цена и адрес.
+						для мобильных телефонов с разрешением экрана всего 128х160.	Однако вы по-прежнему можете осуществлять поиск и получать самую важную информацию о саунах — описание, цена и адрес.
 						Минимум трафика - максимум информации!
 						</p>						
 						<p>Версия <a hred="/pda">для смартфонов</a> сделана специально для устройств с сенсорным экраном, будь то смартфон или планшет. 
-						Она имеет элементы управления, хорошо знакомые владельцам iPhone или iPad - прокручивающиеся списки, слайдеры, раскрывающиеся панели и т.д. Её 
+						Она имеет элементы управления, хорошо знакомые владельцам iPhone или iPad — прокручивающиеся списки, слайдеры, раскрывающиеся панели и т.д. Её 
 						интерфейс удобен и интуитивно понятен. Специально для неё мы сжимаем фотографии, чтобы экономить интернет-трафик, т.о. 
 						использование этой версии не сильно отразиться на вашем балансе.
 						</p>					
 						
-						<p>Но мы позаботились не только о тех, кто любит погреться в сауне! Допустим, вы - владелец бани или сауны и хотите увеличить 
+						<p>Но мы позаботились не только о тех, кто любит погреться в сауне! Допустим, вы — владелец бани или сауны и хотите увеличить 
 						поток клиентов. Зарегистрируйте бесплатно вашу сауну и о ней узнают сотни пользователей нашего сайта. Редактируйте описание, добавляйте 
-						новые сауны, выкладывайте фотографии и модерируйте отзывы - всё это абсолютно бесплатно. 
+						новые сауны, выкладывайте фотографии и модерируйте отзывы — всё это абсолютно бесплатно. 
 						</p>
 
 						<p>Уже скоро мы запустим <a href="/terms">онлайн-бронирование саун</a>. Опросы показывают, что при прочих равных условиях клиент выберет ту сауну, которую ему 
 						будет проще забронировать, поэтому обычно выбираются сауны или бани по-близости. 
-						И это логично, ведь ехать из одного конца города в другой - это значит потратить время, а в наш век - ещё и простоять в пробках. 
+						И это логично, ведь ехать из одного конца города в другой — это значит потратить время, а в наш век — ещё и простоять в пробках. 
 						Позвольте Вашим клиентам бронировать сауну не вставая с кресла, и фактор "эта сауна далеко" перестанет играть для них решающую роль при выборе.										
 						</p>						
 						
