fix photo gallery bug

--- a/app/views/saunas/show.html.erb
+++ b/app/views/saunas/show.html.erb
@@ -20,7 +20,7 @@
 	</div>		
 	
 	<% unless @sauna.sauna_photos.empty? %>
-		<%-#= render 'gallery' %>		
+		<%= render 'gallery' %>		
 	<% end %>	
 	
 	<%= render 'comments' %>		
