fix for sms sending

--- a/app/views/sauna_comments/create.js.erb
+++ b/app/views/sauna_comments/create.js.erb
@@ -1,1 +1,1 @@
-$('<li class="round-box"><dl><dt><span class="author"><%= @sauna_comment.user_name %></span> <span class="date"><%= @sauna_comment.created_at %></span></dt><dd><%= @sauna_comment.description %></dd></dl></li>').appendTo($('.comment-list'));
+$('<li class="round-box"><dl><dt><span class="author"><%= @sauna_comment.user_name %></span> <span class="date"><%= @sauna_comment.created_at.strftime("%d.%m.%Y") %></span></dt><dd><%= @sauna_comment.description %></dd></dl></li>').appendTo($('.comment-list'));
