--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,11 +35,24 @@
 					
 					<a class="banner" href="http://можем-всё.рф" target="_blank"><%= image_tag("banner-mogem.jpg") %></a><br/>
 
-					<!-- webmoney attestation label#F57E7E9C-FB5A-4CCD-A52F-8653DAB57BD3 begin --> 
-					<a href="https://passport.webmoney.ru/asp/certview.asp?wmid=338868942902" target=_blank>
-					<img border="0" src="http://passport.webmoney.ru/images/atstimg/88x31_user/88x31_wm_v_blue_on_white_ru.png"/>
-					</a>
-					<!-- webmoney attestation label#F57E7E9C-FB5A-4CCD-A52F-8653DAB57BD3 end --> 				
+					<table>
+					<tr>
+					<td>
+						<!-- webmoney attestation label#F57E7E9C-FB5A-4CCD-A52F-8653DAB57BD3 begin --> 
+						<a href="https://passport.webmoney.ru/asp/certview.asp?wmid=338868942902" target=_blank>
+						<img border="0" src="http://passport.webmoney.ru/images/atstimg/88x31_user/88x31_wm_v_blue_on_white_ru.png"/>
+						</a>
+						<!-- webmoney attestation label#F57E7E9C-FB5A-4CCD-A52F-8653DAB57BD3 end --> 						
+					</td>
+					<td>
+						<!-- begin WebMoney Transfer : accept label -->
+						<a href="http://www.megastock.ru/" target="_blank"><img src="/assets/acc_blue_on_white_ru.png" alt="www.megastock.ru" border="0"></a>
+						<!-- end WebMoney Transfer : accept label -->					
+					</td>
+					</tr>
+					</table>
+
+					
 				</div>
 				<div class="content-right">												
 					<% if !second_time? %>
