web money hash fix

--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -48,7 +48,7 @@
 			<%-#= f.text_area :description, :rows => 5, :cols => 24 %>
 			<%= f.text_field :description, :rows => 5, :cols => 5 %>
 		</dd>	
-		<dt><label for="provider_type"><%= t :description %>:</dt>
+		<dt><label for="provider_type"><%= t :payment_provider %>:</dt>
 		<dd>
 			<select id="provider_type" name="provider_type">
 				<option value="1">Robokassa</option>
