--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -9,6 +9,16 @@
 				<h1>Бани и сауны в Ижевске</h1>
 				<div class="extra_params _expanded">
 					<div class="about">
+					
+					<!--
+					<object width="600" height="400">
+						<param name="movie" value="/assets/file.swf">
+						<embed src="/assets/file.swf" width="100" height="100">
+						</embed>
+					</object>					
+					<br/>	
+					-->
+					
 						<p>Наш портал — это единый каталог, которые содержит <a href="/all">бани и сауы в Ижевске</a>, а также удобный механизм их поиска и бронирования. 
 						Вы можете осуществлять поиск саун по нужным вам критериям (цена, вместимость, тип и т.д.), читать описания, смотреть 
 						фотографии, узнавать местоположение сауны на карте города или оставлять комментарии. Забронируйте понравившуюся сауну и внесите предоплату на нашем сайте, 
